# potodoroX

./: .gitignore  .lintstagedrc  .vercelignore  PROJECT_ANALYSIS.md  README.md  eslint.config.js  index.html  netlify.toml  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts
.husky/: pre-commit
.windsurf/workflows/: brainstorming.md  caveman.md  diagnose.md  grill-me.md  grill-with-docs.md  improve-architecture.md  project-workflow.md  setup-pre-commit.md  tdd.md  to-issues.md  to-prd.md  verification-before-completion.md  writing-plans.md
.workbuddy/: overview.md
.workbuddy/memory/: 2026-05-03.md  2026-05-04.md  MEMORY.md
DevNotes/: Overall-status.md  global-fix-execute.md  global-fix-plan.md
api/: webdav-proxy.js  webdav-proxy.ts
cloudflare-worker/: README.md  package.json  tsconfig.json  worker.js  wrangler.toml
cloudflare-worker/src/: index.ts
deliverables/engineering-assurance/: code-review-pomodorox-v4-2026-05-20.md
deliverables/software-company/: potodorox-mobile-delivery-2026-05-03.md
dist-verify/: index.html  manifest.json  sw.js
dist-verify/assets/: ReflectionsView-0fkFS1vG.js  ReflectionsView-BZO9iiFx.css  core-CZB1OitF.js  (+25 more)
docs/: PROJECT_DIAGNOSIS.md  PROJECT_ROADMAP.md  prd-mobile.md  system-design-mobile.md  task-list-mobile.md  test-report-mobile.md
public/: manifest.json  sw.js
scripts/: start-with-qr.cjs
src/: App.vue  env.d.ts  main.ts  style.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
(+119 files in other folders)
